Add source for jdk_1.4.0_02